--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-# klipper python virtual environment requirements for beacon
+# klipper python virtual environment requirements for IDM
 numpy>=1.16.6
